# stm32-toolkit

./: CONTRIBUTING.md  README.md  README_zh.md  setup.sh
boards/: bluepill.h  mini_stm32_rct6.h
examples/ADC_Light/: CMakeLists.txt
examples/ADC_Light/src/: main.c
examples/ADC_Temp/: CMakeLists.txt  link.ld
examples/ADC_Temp/src/: main.c  startup.c
examples/TIM_Advanced/: CMakeLists.txt
examples/TIM_Advanced/src/: main.c
examples/TIM_General/: CMakeLists.txt
examples/TIM_General/src/: main.c
packs/CMSIS/: stm32f10x.h
templates/F103C8/: CMakeLists.txt  link.ld
templates/F103C8-hal/: CMakeLists.txt  link.ld
templates/F103C8-hal/inc/: stm32f1xx_hal_conf.h
templates/F103C8-hal/src/: main.c  startup.c  system_stm32f10x.c
templates/F103C8-spl/: CMakeLists.txt  link.ld
templates/F103C8-spl/inc/: board.h
templates/F103C8-spl/src/: main.c  startup.c
templates/F103C8/src/: main.c
templates/F103RCT6/: CMakeLists.txt  link.ld
templates/F103RCT6-hal/: CMakeLists.txt  link.ld
templates/F103RCT6-hal/inc/: stm32f1xx_hal_conf.h
templates/F103RCT6-hal/src/: main.c  startup.c  system_stm32f10x.c
templates/F103RCT6-spl/: CMakeLists.txt  link.ld
templates/F103RCT6-spl/inc/: board.h  stm32f10x_conf.h
templates/F103RCT6-spl/src/: main.c  startup.c
templates/F103RCT6/src/: main.c
